load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "serialization",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/**/*.hpp", "include/**/*.ipp"]),
    srcs = glob(["src/**/*.cpp", "src/**/*.ipp"]),
    deps = [
        "@boost//libs/config",
        "@boost//libs/detail",
        "@boost//libs/assert",
        "@boost//libs/integer",
        "@boost//libs/static_assert",
        "@boost//libs/io",
        "@boost//libs/core",
        "@boost//libs/iterator",
        "@boost//libs/utility",
        "@boost//libs/smart_ptr",
        "@boost//libs/array",
        "@boost//libs/spirit",
        "@boost//libs/function",
    ],
)
